fix tables on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,7 +166,7 @@ main {
     text-align: left;
 }
 
-.table > tbody > tr > td {
+.table__grid .table > tbody > tr > td {
     word-break: break-word;
 }
 
@@ -183,6 +183,12 @@ main {
     grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
     gap: 1rem;
     padding: 1rem;
+}
+
+@media screen and (max-width: 800px) {
+    .table__grid {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
 }
 
 .table__grid > * {
